Update Mailer App API with token-based authentication and 404 page

--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome Page - api-mailer</title>
-  <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      margin: 0;
+      align-items: center;
+      justify-content: center;
+      background-color: #e6e6e6;
+      font-family: 'Roboto', sans-serif;
+      text-align: center;
+    }
+
+    footer {
+      margin-top: auto;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+    }
+
+    p {
+      color: #555;
+    }
+
+    a {
+      text-decoration: none;
+      color: #007BFF;
+    }
+  </style>
 </head>
 <body>
   <div>
